# Minos

./: 10secs_30Pop_best_coeffs.json  10secs_30Pop_metrics.json  10secs_metrics.json  20secs_best_coeffs_1.json  2secs_metrics.json  404.html  50secs_metrics.json  5secs_best_coeffs.json  6_Dof_sim.py  Coefficient_determination  README.md  Simple_GA.py  TSGA_modified.py  TSGA_paper_step_1.py  TSGA_utils.py  best_coefficients.json  gnc_metrics_report.json  guidance.py  guidance_single_step_example.py  guidance_v2.py  index.html  main.py  mkdocs.yml  mod_v1.py  mod_v2.py  model_comparision  modified_tsga_best_coeffs.json  modified_tsga_metrics.json  multi_objective.py  objects.inv  pyproject.toml  run_sim.py  shared_data.npz  sim_single_step.py  simple_guidance_step.py  single_step_sim.py  six_DoF_simulator.py  step2_best_coeffs.json  test_1.json  test_wind.py  (+5 more)
api/: index.html
data/: 10secs_best_coeffs.json  20secs_metrics_1.json  2secs_best_coeffs.json  50secs_best_coeffs.json  5secs_metrics.json  best_coefficients.json  modified_tsga_metrics.json  population_gen_99.json  shared_data.npz  step2_500gen_30pop_best_coeffs.json  step2_500gen_30pop_metrics.json  step2_metrics.json
docs/: api.md  architecture.md  documentation.md  examples.md  guidance.md  identification.md  index.md  parallel.md  physics.md  simulation.md  usage.md
examples/: gnc_3d_example.py  gnc_metrics_example.py  gnc_t_approach_2_example.py  guidance_heading_scenarios.py  identification_metrics_example.py  parallel_gnc_pid_step_sweep.py  physics_model_3d_example.py  sim_single_step.py  test_wind.py  (+3 more)
(+95 files in other folders)
